--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
-body{
-  background-color: #13142E;
+.profileImage {
+  width: 150px;
+  height: 150px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  
 }
+.Habout{
+
+  text-align: center;
+  
+}
+
+.LinkIcons:hover{
+  background-color:rgb(94 234 212) ;
+
+  color:black;
+}
+.ScrollDown{
+  animation: bouncingBallAnimation 2s;  
+  animation-direction: alternate;  
+  animation-timing-function: cubic-bezier(.4, 0.06, 1, .6);  
+  animation-iteration-count: infinite;  
+}
+@keyframes bouncingBallAnimation {  
+  from {  
+      transform: translate3d(0, 0, 0);  
+  }  
+  to {  
+      transform: translate3d(0px, 10px, 10px);  
+  }  
+}  
+
