--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,20 @@ body{
   border-radius: 50%;
   
 }
-/* .SkillCard{
-  background-color: red;
-} */
+.SkillCard ,.works{
+  transition: transform ease-in-out;
+}
+.SkillCard:hover ,.works:hover{
+ transform:translate(0,-5px);
+}
 .Habout{
 
   text-align: center;
   
 }
-
+.LinkIcons{
+  transition: background-color ease-in-out;
+}
 .LinkIcons:hover{
   background-color:rgb(94 234 212) ;
 
@@ -44,3 +49,54 @@ body{
   }  
 }  
 
+
+
+.PathLineMain{
+  height:50vh;
+  width: 5px;
+  background-color: gray;
+  position: relative;
+  z-index: -1;
+
+}
+.Linking{
+  position: absolute;
+  width: 20px;
+  height:5px;
+  background-color: gray;
+  top:27px;
+  right:11px;
+  /* left:10; */
+}
+.LinkingCircle{
+  position: absolute;
+  width: 20px;
+  height:20px;
+  border-radius: 50%;
+  border:5px solid gray;
+  top:20px;
+  left:-7px;
+  background-image: url(./assests/Images/bgAbout.png);
+}
+.LinkingOther{
+  position: absolute;
+  width: 20px;
+  height:5px;
+  background-color:gray;
+  top:27px;
+  left:11px;
+  /* left:10; */
+}
+
+
+input{
+  background-color: rgb(19,20,46);
+  width: 100%;
+  height: 40px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+textarea{
+  background-color: rgb(19,20,46);
+  width: 100%;
+}
